--- a/src/draft/sidebar/sidebar.css
+++ b/src/draft/sidebar/sidebar.css
@@ -1,4 +1,9 @@
-html, body{
+/*
+	!TODO: custom scroller
+*/
+
+html,
+body {
 	background-color: #1a1a1a;
 	margin: 0;
 	padding: 0;
@@ -13,49 +18,61 @@ html, body{
 	width: 80px;
 	display: flex;
 	flex-direction: column;
-	columns: ;
+	overflow-y: scroll;
 }
 
-.sidebar .header{
+/*.sidebar.active9{*/
+/*	overflow: hidden;*/
+/*}*/
+
+.sidebar .header {
+	display: flex;
+	text-align: center;
+	justify-content: center;
+	flex-direction: column;
+	gap: 0;
+
+	flex: 0;
+	height: 100px;
 	color: #acacac;
 	font-family: jost;
-	text-align: center;
 	font-weight: 400;
 	font-size: 32px;
 	padding: 18px 21px;
-	justify-content: center;
+	cursor: default;
+	transition: 200ms;
+
+
 }
 
 .sidebar .content {
 	display: flex;
-	flex-direction: column;
 	align-items: center;
-	padding: 10px 0;
+	flex-direction: column;
+	padding: 0 0;
 	gap: 10px;
-	transition: 500ms;
+	transition: 700ms;
 	opacity: 1;
-
-
 }
 
 .sidebar .content button {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+
 	width: 60px;
 	height: 60px;
-	border: none;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	padding: 10px 0px;
-	background: #141414;
-	border-radius: 6px;
+	background-color: #141414;
 	color: #585858;
+	padding: 10px 0px;
+	border-radius: 6px;
 	transition: 200ms;
 
 	border: 0px solid #0000;
 }
 .sidebar .content button:hover {
-	background: #181818;
+	background-color: #181818;
 }
 .sidebar .content button:focus {
 	transition: 1200ms;
@@ -63,42 +80,36 @@ html, body{
 	border-radius: 13px;
 }
 
-
 .sidebar .content button img {
-	max-width:100%;
-	max-height:100%;
+	user-select: none;
+	user-drag: none;
+	-webkit-user-drag: none;
+	-webkit-user-select: none;
+
+	max-width: 100%;
+	max-height: 100%;
 	height: auto;
 	transition: 700ms;
 }
 .sidebar .content button:hover img {
-	user-select: none;
-    user-drag: none;
-    -webkit-user-drag: none;
-    -webkit-user-select: none;
 	transition: 200ms;
+	transform: rotate(7deg) /*translateX(+1px)*/;
 }
 
-.sidebar .content button:focus img{
-	transition: 700ms;
+.sidebar .content button:focus img {
+	transition: 300ms;
 	transform: scale(1.3);
-
 }
 
 /*   */
 
-.sidebar .header {
-	display: flex;
-	flex-direction: column;
-	cursor: default;
-	gap: 0;
-	transition: 200ms;
-/*	border-radius: 50px;*/
-}
 .sidebar .header:hover {
 	padding-top: 35px;
+	height: 300px;
+	transition: 299ms;
 }
 
-.sidebar .header span{
+.sidebar .header span {
 	position: relative;
 	line-height: 30px;
 	user-select: none;
@@ -116,16 +127,19 @@ html, body{
 	line-height: 30px;
 	font-size: 32px;
 	opacity: 1;
-	transition: all 700ms, line-height 500ms,font-size 200ms;
-/*	transition-delay: 300ms;*/
+	transition: all 700ms, line-height 500ms, font-size 200ms;
 }
 
 .sidebar .header:active {
-/*	background-color: #33334f;*/
+	/*	background-color: #33334f;*/
 	border-radius: 0;
 	box-shadow: 0 0 80px 7px #101010 inset;
 	flex: 1;
+	height: 100%;
 	transition: 400ms;
+	position: sticky;
+	top: 0;
+	z-index: 999;
 }
 
 .sidebar .header:before {
@@ -138,32 +152,29 @@ html, body{
 	pointer-events: none;
 	opacity: 0;
 	transition: 1200ms;
-	background: linear-gradient(to right, #0ff3, #6060);
+	background: linear-gradient(to right, #0ff1, #6060);
 	transform: translateX(-30px);
 }
 .sidebar .header:active:before {
 	content: "";
 	opacity: 1;
 	transform: translateX(0);
+	transition-timing-function: ease-in;
 }
+
+/*   */
 
 .sidebar .header:active span,
-.sidebar .header:active span.reveal{
+.sidebar .header:active span.reveal {
 	line-height: 50px;
 	transition: 2000ms;
-
-}
-
-.sidebar .content {
-	opacity: 1;
 }
 
 .sidebar .header:active + .content,
 .sidebar .header:active + .content + .footer {
-/*	background-color: cyan;*/
-
-	padding: 0;
+	transform: translateY(85px);
 	flex: 0;
-	padding: 0;
 	height: 0;
+	border-radius: 50px;
+	box-shadow: 0 13px 5px 10px #0ff inset;
 }
