--- a/src/draft/coolText/coolText.css
+++ b/src/draft/coolText/coolText.css
@@ -1,22 +1,13 @@
-/*
-	IDEA:
-		wrap it in a coolTextContainer
-		coolTextContainer:active .coolText span:hover {transform: scale: 1.1}
-		when clicked and dragged, it'll make them go larger instead.
-		that's the only way to have clicked and hovered for multiple elements I've found
-*/
-
-body{
-	background-color: #1a1a1a;
-	color: #ededed;
+body {
+	--coolTextHighlight: #55f3;
 }
 
 .coolText {
-	font-size: 70px;
 	user-select: none;
 }
 
-.coolText span {
+.coolText span,
+.coolText br {
 	transition: 600ms;
 	display: inline-block;
 	cursor: default;
@@ -26,43 +17,43 @@ body{
 	font-family: sans-serif;
 }
 
-.coolText span:hover { 
+.coolText span:hover {
 	transform: scale(0.8);
-/*	opacity: 0.6; */
 	transition: 100ms;
 	transition-timing-function: ease;
 }
-body:active .coolText span:hover { 
-	opacity: 0.6; 
+body:active .coolText span:hover {
+	opacity: 0.6;
 	transform: scale(1.2);
-		transition: 200ms;
+	transition: 200ms;
 	transition-timing-function: cubic-bezier(0.21, 2.1, 0.58, 1);
-/*	!!! super !!!*/
-/*	filter: drop-shadow(8px 8px 0 #0ff) drop-shadow(-8px -8px 0 #f0f);*/*/
-
 }
 
-.coolText span::selection {
-  color: #eee;
-  background: #7700ff;
-}
+/* use-select is none  */
+/*.coolText span::selection {*/
+/*	color: #eee;*/
+/*	background: #7700ff;*/
+/*}*/
 
-.coolText.extra span{
+.coolText.extra span {
 	transform-origin: center;
-	border-radius: 3px;
+	border-radius: 0.07em;
 }
 
-.coolText.extra span:hover{
-	--highlight: #55f3;
-	box-shadow: 0 0 0 20px var(--highlight);
-	background-color: var(--highlight);
+.coolText.extra span:hover {
+	/*	--coolTextHighlight: #55f3;*/
+	box-shadow: 0 0 0 0.4em var(--coolTextHighlight);
+	background-color: var(--coolTextHighlight);
 }
 
-.coolText.extra span::selection{
-  background: #6600aa;
+body:active .coolText.super span:hover {
+	filter: drop-shadow(0.17em 0.17em 0 #0ff) drop-shadow(-0.17em -0.17em 0 #f0f);
 }
 
-.coolText span:active { 
-/*	opacity: 1; */
-/*	transform: scale(1.2);*/
-}
+/* use-select is none  */
+/*.coolText.extra span::selection {*/
+/*	background: #6600aa;*/
+/*}*/
+
+/*.coolText span:active {*/
+/*}*/
