--- a/src/draft/sidebar/scroll.css
+++ b/src/draft/sidebar/scroll.css
@@ -1,20 +1,20 @@
 /* width */
-.sidebar::-webkit-scrollbar {
+v-sidebar::-webkit-scrollbar {
   width: 3px;
 }
 
 /* Track */
-.sidebar::-webkit-scrollbar-track {
+v-sidebar::-webkit-scrollbar-track {
   background: #101010;
 }
 
 /* Handle */
-.sidebar::-webkit-scrollbar-thumb {
+v-sidebar::-webkit-scrollbar-thumb {
   background: #555;
   border-radius: 3px;
 }
 
 /* Handle on hover */
-.sidebar::-webkit-scrollbar-thumb:hover {
+v-sidebar::-webkit-scrollbar-thumb:hover {
   background: #888;
 }
