--- a/src/draft/sidebarVanilla/sidebar.css
+++ b/src/draft/sidebarVanilla/sidebar.css
@@ -5,7 +5,7 @@ body {
 	padding: 0;
 }
 
-v-sidebar {
+.sidebar {
 	background-color: #101010;
 	position: fixed;
 	left: 0;
@@ -17,32 +17,11 @@ v-sidebar {
 	overflow-y: scroll;
 }
 
-v-sidebar[v9="1"] {
-	overflow: hidden;
-}
-
-v-sidebar:before {
-	content: "";
-	position: absolute;
-	left: 0;
-	top: 0;
-	width: 100%;
-	height: 100%;
-	background: linear-gradient(to right, #0ff1, #6060);
-	opacity: 0;
-	transition: 400ms;
-}
-v-sidebar[v9="1"]:before {
-	transition: 1600ms;
-	opacity: 1;
-}
-
-
-/*v-sidebar.active9{*/
+/*.sidebar.active9{*/
 /*	overflow: hidden;*/
 /*}*/
 
-v-sidebar .header {
+.sidebar .header {
 	display: flex;
 	text-align: center;
 	justify-content: center;
@@ -55,14 +34,14 @@ v-sidebar .header {
 	font-family: jost;
 	font-weight: 400;
 	font-size: 32px;
-	padding: 18px 0;
+	padding: 18px 21px;
 	cursor: default;
 	transition: 200ms;
 
 
 }
 
-v-sidebar .content {
+.sidebar .content {
 	display: flex;
 	align-items: center;
 	flex-direction: column;
@@ -72,8 +51,7 @@ v-sidebar .content {
 	opacity: 1;
 }
 
-v-sidebar .content button {
-	position: relative;
+.sidebar .content button {
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -89,20 +67,16 @@ v-sidebar .content button {
 
 	border: 0px solid #0000;
 }
-v-sidebar .content button:hover {
+.sidebar .content button:hover {
 	background-color: #181818;
 }
-v-sidebar .content button[active] {
+.sidebar .content button:focus {
 	transition: 1200ms;
 	box-shadow: 0 0 0 1px #585858;
 	border-radius: 13px;
 }
-v-sidebar .content button[active]:hover {
-	transform: scale(1.05);
-	transition: 400ms;
-}
 
-v-sidebar .content button img {
+.sidebar .content button img {
 	user-select: none;
 	user-drag: none;
 	-webkit-user-drag: none;
@@ -113,49 +87,49 @@ v-sidebar .content button img {
 	height: auto;
 	transition: 700ms;
 }
-v-sidebar .content button:hover img {
+.sidebar .content button:hover img {
 	transition: 200ms;
 	transform: rotate(7deg) /*translateX(+1px)*/;
 }
 
-v-sidebar .content button[active] img {
+.sidebar .content button:focus img {
 	transition: 300ms;
 	transform: scale(1.3);
 }
 
 /*   */
 
-v-sidebar .header:hover {
+.sidebar .header:hover {
 	padding-top: 35px;
 	height: 300px;
 	transition: 299ms;
 }
 
-v-sidebar .header span {
+.sidebar .header span {
 	position: relative;
 	line-height: 30px;
 	user-select: none;
 }
 
-v-sidebar .header span.reveal {
+.sidebar .header span.reveal {
 	line-height: 0px;
 	font-size: 0;
 	opacity: 0;
 	transition: 200ms;
 	transform-origin: center;
 }
-v-sidebar .header[v9="1"] span.reveal,
-v-sidebar .header:hover span.reveal {
+.sidebar .header:active span.reveal,
+.sidebar .header:hover span.reveal {
 	line-height: 30px;
 	font-size: 32px;
 	opacity: 1;
 	transition: all 700ms, line-height 500ms, font-size 200ms;
 }
 
-v-sidebar .header[v9="1"] {
+.sidebar .header:active {
 	/*	background-color: #33334f;*/
 	border-radius: 0;
-/*	box-shadow: 0 0 80px 7px #101010 inset;*/
+	box-shadow: 0 0 80px 7px #101010 inset;
 	flex: 1;
 	height: 100%;
 	transition: 400ms;
@@ -164,7 +138,7 @@ v-sidebar .header[v9="1"] {
 	z-index: 999;
 }
 
-v-sidebar .header:before {
+.sidebar .header:before {
 	content: "";
 	position: absolute;
 	top: 0;
@@ -174,11 +148,10 @@ v-sidebar .header:before {
 	pointer-events: none;
 	opacity: 0;
 	transition: 1200ms;
-/*	background: linear-gradient(to right, #0ff1, #6060);*/
-/*	box-shadow: 0 -20px 20px #101010 inset;*/
+	background: linear-gradient(to right, #0ff1, #6060);
 	transform: translateX(-30px);
 }
-v-sidebar .header[v9="1"]:before {
+.sidebar .header:active:before {
 	content: "";
 	opacity: 1;
 	transform: translateX(0);
@@ -187,25 +160,17 @@ v-sidebar .header[v9="1"]:before {
 
 /*   */
 
-v-sidebar .header[v9="1"] span,
-v-sidebar .header[v9="1"] span.reveal {
+.sidebar .header:active span,
+.sidebar .header:active span.reveal {
 	line-height: 50px;
 	transition: 2000ms;
 }
 
-v-sidebar .header[v9="1"] + .content,
-v-sidebar .header[v9="1"] + .content + .footer {
+.sidebar .header:active + .content,
+.sidebar .header:active + .content + .footer {
 	transform: translateY(85px);
-	transition-delay: 300ms;
 	flex: 0;
 	height: 0;
 	border-radius: 50px;
 	box-shadow: 0 13px 5px 10px #0ff inset;
-	opacity: 0.7;
-}
-
-v-sidebar .header[v9="2"] {
-	transform: translateX(-100%);
-	opacity: 0;
-	transition: 150ms;
 }
