--- a/src/draft/notifications/notifications.css
+++ b/src/draft/notifications/notifications.css
@@ -1,17 +1,27 @@
-v-notifications{
+.v-notifications{
 	display: flex;
-	flex-direction: column;
-	width: 800px;
+	flex-direction: column-reverse;
+/*	align-items: flex-start;*/
+	justify-content: flex-start;
+/*	align-items: flex-start*/
+	width: 460px;
 	height: 100%;
-	gap: 20px;
+/*	gap: 20px;*/
 	padding-bottom: 50px;
 	position: fixed;
-	top: 0;
+align-content: flex-start;
+	bottom: 0;
 	right: 30px;
 	overflow-y: auto;
+	overflow-x: hidden;
 
 }
 
-v-notifications > v-notification:last-child {
-    margin-bottom: 50px;
-}
+/* now we use direction reverse column  */
+/*.v-notifications > v-notification:last-child {*/
+/*    margin-bottom: 50px;*/
+/*}*/
+
+/*.v-notifications > v-notification:last-child {*/
+/*    margin-top: auto;*/
+/*}*/
