--- a/src/draft/v-button/v-button.css
+++ b/src/draft/v-button/v-button.css
@@ -55,7 +55,8 @@ v-button:hover button {
 	color: var(--passive);
 	box-shadow: 0 0 0 10px var(--active);
 }
-v-button button:focus {
+/*v-button button:focus,*/
+v-button[active] button{
 	box-shadow: none;
 }
 
@@ -65,13 +66,15 @@ v-button:hover .circle{
 	height: var(--size-to);
 }
 
-v-button button:focus + .circle{
+/*v-button button:focus + .circle,*/
+v-button[active] button + .circle{
 	width: 120%;
 	height: 120%;
 	transition: 400ms cubic-bezier(0.11, 0.88, 0.58, 1);
 }
 
-v-button button:focus{
+/*v-button button:focus,*/
+v-button[active] button {
 	transition: 200ms;
 	border-width: 0;
 /*	transform: scale(0.95);*/
@@ -79,7 +82,9 @@ v-button button:focus{
 	color: #ededed;
 }
 
-v-button.glass button:focus{
+/*v-button.glass button:focus,*/
+v-button.glass[active] button
+{
 	opacity: 0.9;
 }
 
