move network table css to a different file

--- a/src/views/network/network.css
+++ b/src/views/network/network.css
@@ -1,19 +1,10 @@
-/**{*/
-/*	padding: 2px;*/
-/*	border: 2px solid cyan;*/
-/*}*/
-
-
-v-network {
-/*	display: flex;*/
-/*	align-items: center;*/
-/*	justify-content: flex-start;*/
-/*	flex-direction: column;*/
-}
-
 v-network .content{
 	padding: 42px 20px;
 	overflow-y: auto;
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 100%;
 	height: 100vh;
 	height: 100svh;
 }
@@ -42,134 +33,3 @@ v-network h4{
 	/* or 34px */
 
 }
-
-v-network * {
-/*	border: 2px solid #0ff7;*/
-}
-
-v-network .table.socials {
-	margin-top: 50px;
-}
-
-v-network .table.socials a{
-	color: #ededed;
-	text-decoration: none;
-
-}
-
-.cell{
-/*	border: 1px solid cyan;*/
-}
-
-v-network .table.socials .cell.icon {
-/*	background-color: red;*/
-	text-align: center;
-	width: 41px;
-	height: 34px;
-	min-width: 41px;
-	padding: 10px;
-}
-
-v-network .table.socials .cell.platform{
-	min-width: 204px;
-	font-family: 'Open Sans';
-	font-style: normal;
-	font-weight: 400;
-	font-size: 31px;
-	padding: 0 16px;
-}
-
-v-network .table.socials .cell.username{
-	font-family: 'Fira Mono';
-	font-style: normal;
-	font-weight: 400;
-	font-size: 26px;
-	min-width: 281px;
-}
-
-v-network .table.socials .cell.note {
-	font-family: 'Open Sans';
-	font-style: normal;
-	font-weight: 400;
-	font-size: 20px;
-	line-height: 110%;
-	color: #B8B4B8;
-	padding-left: 40px;
-
-}
-
-v-network .table.socials{
-  border-collapse: collapse;
-}
-
-v-network .table.socials .row:hover {
-	background-color: #131313;
-	box-shadow: 0 -1px 0 #2c2c2c, 0 1px 0 #2c2c2c;
-}
-
-
-v-network .table.socials .row .cell.icon {
-	z-index: 3;
-}
-v-network .table.socials .row .cell.username {
-	z-index: 4;
-}
-
-
-v-network .table.socials .row .cell.icon > img {
-	transition: all 1000ms;
-	transition-timing-function: line;
-}
-v-network .table.socials .row:hover .cell.icon > img {
-	transition: all 600ms, transform linear 1600ms;
-	transition-timing-function: cubic-bezier(0.22, 2.18, 0.38, 1.02);
-	transform: rotate(-25deg);
-	filter: 
-
-/*	drop-shadow(-100px -100px 0 #1DA1F288)*/
-/*	drop-shadow(+100px +100px 0 #1DA1F288)*/
-	drop-shadow(-100px -100px 0 #3affff)
-	drop-shadow(+100px +100px 0 #3affff)
-
-	drop-shadow(-100px +100px 0 #3affff)
-	drop-shadow(+100px -100px 0 #3affff)
-	brightness(2)
-	drop-shadow(0 0 20px #1DA1F2)
-	;	
-}
-
-
-/* <a> row table  */
-
-.table {
-  display: table;
-}
-
-.row {
-  display: table-row;
-  padding-top: 10px;
-  padding-bottom: 10px;
-
-}
-
-.cell.icon{
-text-align: center;
-
-}
-
-.cell {
-  display: table-cell;
-/*  padding: 10px;*/
-vertical-align: middle;
-
-}
-
-/*
-.row:hover {
-  background-color: #cccccc;
-}
-
-.cell:hover {
-  background-color: #e5e5e5;
-}
-*/
