move content behind sidebar; give sidebar a blur
now every v-element view should contain a div with a class .content

v-element {overflow-y: auto}
.content {left: 80px}

so overflow from .content can go behind the sidebar
(previously coudn't cuz overflowY auto won't let overflow visible on X)

--- a/src/sidebar/scroll.css
+++ b/src/sidebar/scroll.css
@@ -5,6 +5,9 @@ v-sidebar::-webkit-scrollbar {
 
 /* Track */
 v-sidebar::-webkit-scrollbar-track {
+  /*  we can make the scroll bar translucent too 
+  but it's better. kinda like protected glass. */
+  /*  background-color: #0000;*/
   background: #101010;
 }
 
