--- a/src/sidebar/content.css
+++ b/src/sidebar/content.css
@@ -2,8 +2,10 @@
 	background-color: transparent;
 	color: #ededed;
 	height: 100vh;
-	width: calc(100% - 80px);
-	left: 80px;
+/*	width: calc(100% - 80px);*/
+	width: 100%;
+/*	left: 80px;*/
+	left: 0;
 	position: absolute;
 	transition: 200ms;
 }
@@ -13,17 +15,25 @@
 	transition: 0;
 }
 
-/* content should contain single element. 
-it can have multiple elements, but one with .open class. (not implemented)
-others will "fade out" in their fashion. the .open class "fades in" creating 
-smooth transition. but to make "fade out" not same with "fade in", 
-we have .close class that will assign the "fade out" properties.
+/* v-elements  */
+#content > *{
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100vh;
+	height: 100svh;
+	overflow-y: auto;
+	z-index: 904;
+}
 
-we can use Lit to create our views, import dynamically, create and appemd.
-everything dependant should be in the the element's module itself.
-or maybe dynamic fetching with until() directive. but while the view's itself
-or root content element is loading, #content>loader (not implemented) will do 
-the placeholder job. */
+/* .content div in v-elements*/
+#content > * > .content{
+	position: absolute;
+	left: 80px;
+	width: calc(100% - 80px);
+}
+
 #content > * {
 	position: inherit;
 /*	background-color: #f005;*/
