--- a/draft/notifications/notifications.css
+++ b/draft/notifications/notifications.css
@@ -6,7 +6,9 @@
 /*	align-items: flex-start*/
 	width: 490px;
 	height: 100%;
+/*	border: 2px solid cyan;*/
 /*	gap: 20px;*/
+	padding: 0 20px;
 	padding-bottom: 50px;
 	position: fixed;
 align-content: flex-start;
