add notification close button style; add gradient gray shade

--- a/draft/notifications/notification.css
+++ b/draft/notifications/notification.css
@@ -24,11 +24,18 @@ v-notification {
 v-notification .content {
 	flex: 1;
 	border-radius: calc(var(--b-radius) - var(--b-width) / 2);
-	background-color: #101010;
+	background: linear-gradient(117.72deg, rgba(21, 21, 21, 0.8) 12.19%, rgba(28, 28, 28, 0.8) 85.22%);
+	background-color: #161616;
 	color: #eee;
 	padding: 25px;
 	overflow: hidden;
 	position: relative;
+	padding-top: 60px;
+	padding-left: 50px;
+}
+v-notification {
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+
 }
 
 v-notification.important{
@@ -58,7 +65,7 @@ v-notification{
 
 v-notification{
 	animation: bringNotificcation 800ms;
-	animation-timing-function: cubic-bezier(0.18, 0.76, 0.24, 0.92);
+	animation-timing-function: cubic-bezier(0.18, 0.76, 0.15, 1);
 }
 @keyframes bringNotificcation{
 	from{
@@ -94,3 +101,39 @@ v-notification.closing{
 	transform: translateX(200%);
 	overflow: hidden;
 }
+
+v-notification button.close{
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	padding: 10px;
+	gap: 10px;
+
+	width: 36px;
+	height: 36px;
+
+	background: #1F1F1F;
+	border: 1px solid #282828;
+	border-radius: 34px;
+
+
+	font-family: 'Open Sans';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 11px;
+	line-height: 110%;
+
+	color: #FFFFFF;
+
+	position: absolute;
+	top: 12px;
+	left: 12px;
+}
+
+/*
+another place
+v-notification:hover .content{
+	transform: rotateZ(30deg) rotateY(30deg) rotateX(30deg);
+	transition: 200ms;
+}*/
